# gen-ai

./: LICENSE  README.md
libs/annapurna/: __init__.py  __main__.py  langchain_retriever.py  retriever.py
mcp-servers/annapurna/: README.md  pyproject.toml
mcp-servers/annapurna/annapurna/: __main__.py
