[project]
name = "annapurna"
version = "0.1.0"
description = "A simple MCP server exposing a tool querying Annapurna"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rubrik, Inc." }]
maintainers = [
    { name = "Seungyeop Han", email = "seungyeop.han@rubrik.com" },
]
keywords = ["mcp", "llm", "annapurna"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["anyio>=4.5", "click>=8.1.0", "httpx>=0.27", "mcp", "httpx-oauth"]
